Added distribution management.

--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
     <inceptionYear>2010</inceptionYear>
 
     <scm>
-        <connection>scm:git:git://github.com:mulesoft/certified-devkit-parent-pom.git</connection>
-        <developerConnection>scm:git:git@github.com:mulesoft/certified-devkit-parent-pom.git</developerConnection>
-        <url>http://github.com/mulesoft/certified-devkit-parent-pom</url>
+        <connection>scm:git:git://github.com:mulesoft/certified-mule-connector-parent.git</connection>
+        <developerConnection>scm:git:git@github.com:mulesoft/certified-mule-connector-parent.git</developerConnection>
+        <url>http://github.com/mulesoft/certified-mule-connector-parent</url>
         <tag>HEAD</tag>
     </scm>
 
@@ -22,7 +22,7 @@
         <version>3.9.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>certified-mule-devkit-parent</artifactId>
+    <artifactId>certified-mule-connector-parent</artifactId>
     <packaging>pom</packaging>
 
     <properties>
@@ -30,59 +30,55 @@
     </properties>
 
     <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.19.1</version>
-                    <configuration>
-                        <enableAssertions>false</enableAssertions>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <id>unit-tests</id>
-                            <phase>test</phase>
-                            <goals>
-                                <goal>test</goal>
-                            </goals>
-                            <configuration>
-                                <argLine>${jacoco.ut.agent}</argLine>
-                                <includes>
-                                    <include>**/*.java</include>
-                                </includes>
-                                <excludes>
-                                    <exclude>**/*IT.java</exclude>
-                                </excludes>
-                            </configuration>
-                        </execution>
-                        <execution>
-                            <id>integration-tests</id>
-                            <phase>integration-test</phase>
-                            <goals>
-                                <goal>test</goal>
-                            </goals>
-                            <configuration>
-                                <systemPropertyVariables>
-                                    <ctf.connector.class>${ctf.connector.class}</ctf.connector.class>
-                                </systemPropertyVariables>
-                                <properties>
-                                    <property>
-                                        <name>listener</name>
-                                        <value>org.mule.tools.devkit.ctf.listeners.ConnectorTestFrameworkRunListener</value>
-                                    </property>
-                                </properties>
-                                <argLine>${jacoco.it.agent}</argLine>
-                                <includes>
-                                    <include>**/*IT.java</include>
-                                </includes>
-                            </configuration>
-                        </execution>
-                    </executions>
-                </plugin>
-            </plugins>
-        </pluginManagement>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+                <configuration>
+                    <enableAssertions>false</enableAssertions>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>unit-tests</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                        <configuration>
+                            <argLine>${jacoco.ut.agent}</argLine>
+                            <includes>
+                                <include>**/*.java</include>
+                            </includes>
+                            <excludes>
+                                <exclude>**/*IT.java</exclude>
+                            </excludes>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>integration-tests</id>
+                        <phase>integration-test</phase>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                        <configuration>
+                            <systemPropertyVariables>
+                                <ctf.connector.class>${ctf.connector.class}</ctf.connector.class>
+                            </systemPropertyVariables>
+                            <properties>
+                                <property>
+                                    <name>listener</name>
+                                    <value>org.mule.tools.devkit.ctf.listeners.ConnectorTestFrameworkRunListener</value>
+                                </property>
+                            </properties>
+                            <argLine>${jacoco.it.agent}</argLine>
+                            <includes>
+                                <include>**/*IT.java</include>
+                            </includes>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -162,5 +158,19 @@
             <layout>default</layout>
         </pluginRepository>
     </pluginRepositories>
+
+    <distributionManagement>
+        <repository>
+            <id>mule-ee-releases</id>
+            <name>MuleEE Releases Repository</name>
+            <url>https://repository-master.mulesoft.org/nexus/content/repositories/releases-ee/</url>
+        </repository>
+        <snapshotRepository>
+            <id>mule-ee-snapshots</id>
+            <name>MuleEE Snapshots Repository</name>
+            <url>https://repository-master.mulesoft.org/nexus/content/repositories/ci-snapshots/</url>
+            <uniqueVersion>false</uniqueVersion>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
 
