--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
                 </configuration>
                 <executions>
                     <execution>
+                        <id>default-test</id>
+                        <configuration>
+                            <skip>true</skip>
+                        </configuration>
+                    </execution>
+                    <execution>
                         <id>unit-tests</id>
                         <phase>test</phase>
                         <goals>
