--- a/pom.xml
+++ b/pom.xml
@@ -174,5 +174,25 @@
             <uniqueVersion>false</uniqueVersion>
         </snapshotRepository>
     </distributionManagement>
+
+
+    <profiles>
+        <profile>
+            <id>deploy</id>
+            <distributionManagement>
+                <repository>
+                    <id>mulesoft-releases</id>
+                    <name>MuleSoft Repository</name>
+                    <url>http://repository-master.mulesoft.org/releases/</url>
+                </repository>
+                <snapshotRepository>
+                    <id>mulesoft-snapshots</id>
+                    <name>MuleSoft Snapshot Repository</name>
+                    <url>http://repository-master.mulesoft.org/snapshots/</url>
+                    <uniqueVersion>false</uniqueVersion>
+                </snapshotRepository>
+            </distributionManagement>
+        </profile>
+    </profiles>
 </project>
 
