--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>org.mule.tools.devkit</groupId>
         <artifactId>mule-devkit-parent</artifactId>
-        <version>3.9.0-SNAPSHOT</version>
+        <version>3.9.0</version>
     </parent>
 
     <artifactId>certified-mule-connector-parent</artifactId>
