--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <scm>
         <connection>scm:git:git://github.com:mulesoft/certified-mule-connector-parent.git</connection>
         <developerConnection>scm:git:git@github.com:mulesoft/certified-mule-connector-parent.git</developerConnection>
-        <url>http://github.com/mulesoft/certified-mule-connector-parent</url>
+        <url>https://github.com/mulesoft/certified-mule-connector-parent</url>
         <tag>HEAD</tag>
     </scm>
 
@@ -132,7 +132,14 @@
                     </execution>
                 </executions>
             </plugin>
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+                <configuration>
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
