--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <scm>
         <connection>scm:git:git://github.com:mulesoft/certified-mule-connector-parent.git</connection>
         <developerConnection>scm:git:git@github.com:mulesoft/certified-mule-connector-parent.git</developerConnection>
-        <url>https://github.com/mulesoft/certified-mule-connector-parent</url>
+        <url>http://github.com/mulesoft/certified-mule-connector-parent</url>
         <tag>HEAD</tag>
     </scm>
 
@@ -23,7 +23,6 @@
     </parent>
 
     <artifactId>certified-mule-connector-parent</artifactId>
-    <version>3.9.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -49,17 +48,6 @@
 
     <build>
         <plugins>
-            <plugin>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>2.4.2</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.maven.scm</groupId>
-                        <artifactId>maven-scm-provider-gitexe</artifactId>
-                        <version>1.8.1</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -149,14 +137,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>2.5.3</version>
-                <configuration>
-                    <tagNameFormat>v@{project.version}</tagNameFormat>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 
@@ -209,25 +189,5 @@
             <uniqueVersion>false</uniqueVersion>
         </snapshotRepository>
     </distributionManagement>
-
-
-    <profiles>
-        <profile>
-            <id>certified-parent-pom-deploy</id>
-            <distributionManagement>
-                <repository>
-                    <id>mulesoft-releases</id>
-                    <name>MuleSoft Repository</name>
-                    <url>http://repository-master.mulesoft.org/releases/</url>
-                </repository>
-                <snapshotRepository>
-                    <id>mulesoft-snapshots</id>
-                    <name>MuleSoft Snapshot Repository</name>
-                    <url>http://repository-master.mulesoft.org/snapshots/</url>
-                    <uniqueVersion>false</uniqueVersion>
-                </snapshotRepository>
-            </distributionManagement>
-        </profile>
-    </profiles>
 </project>
 
