--- a/pom.xml
+++ b/pom.xml
@@ -193,10 +193,28 @@
         </snapshotRepository>
     </distributionManagement>
 
-
     <profiles>
         <profile>
             <id>certified-parent-pom-deploy</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-release-plugin</artifactId>
+                        <configuration>
+                            <pushChanges>true</pushChanges>
+                        </configuration>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.apache.maven.scm</groupId>
+                                <artifactId>maven-scm-provider-gitexe</artifactId>
+                                <version>1.8.1</version>
+                            </dependency>
+                        </dependencies>
+                        <version>2.5.2</version>
+                    </plugin>
+                </plugins>
+            </build>
             <distributionManagement>
                 <repository>
                     <id>mulesoft-releases</id>
