--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <connection>scm:git:git://github.com:mulesoft/certified-mule-connector-parent.git</connection>
         <developerConnection>scm:git:git@github.com:mulesoft/certified-mule-connector-parent.git</developerConnection>
         <url>https://github.com/mulesoft/certified-mule-connector-parent</url>
-        <tag>v3.9.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <parent>
@@ -22,7 +22,7 @@
     </parent>
 
     <artifactId>certified-mule-connector-parent</artifactId>
-    <version>3.9.0</version>
+    <version>3.9.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
