--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <name>Certified Mule DevKit Parent</name>
@@ -30,6 +31,41 @@
     </properties>
 
     <profiles>
+        <profile>
+            <id>certified-parent-pom-deploy</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-release-plugin</artifactId>
+                        <configuration>
+                            <pushChanges>true</pushChanges>
+                        </configuration>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.apache.maven.scm</groupId>
+                                <artifactId>maven-scm-provider-gitexe</artifactId>
+                                <version>1.8.1</version>
+                            </dependency>
+                        </dependencies>
+                        <version>2.5.2</version>
+                    </plugin>
+                </plugins>
+            </build>
+            <distributionManagement>
+                <repository>
+                    <id>mulesoft-releases</id>
+                    <name>MuleSoft Repository</name>
+                    <url>http://repository-master.mulesoft.org/releases/</url>
+                </repository>
+                <snapshotRepository>
+                    <id>mulesoft-snapshots</id>
+                    <name>MuleSoft Snapshot Repository</name>
+                    <url>http://repository-master.mulesoft.org/snapshots/</url>
+                    <uniqueVersion>false</uniqueVersion>
+                </snapshotRepository>
+            </distributionManagement>
+        </profile>
         <profile>
             <id>sonar</id>
             <activation>
@@ -190,42 +226,5 @@
         </snapshotRepository>
     </distributionManagement>
 
-    <profiles>
-        <profile>
-            <id>certified-parent-pom-deploy</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-release-plugin</artifactId>
-                        <configuration>
-                            <pushChanges>true</pushChanges>
-                        </configuration>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.apache.maven.scm</groupId>
-                                <artifactId>maven-scm-provider-gitexe</artifactId>
-                                <version>1.8.1</version>
-                            </dependency>
-                        </dependencies>
-                        <version>2.5.2</version>
-                    </plugin>
-                </plugins>
-            </build>
-            <distributionManagement>
-                <repository>
-                    <id>mulesoft-releases</id>
-                    <name>MuleSoft Repository</name>
-                    <url>http://repository-master.mulesoft.org/releases/</url>
-                </repository>
-                <snapshotRepository>
-                    <id>mulesoft-snapshots</id>
-                    <name>MuleSoft Snapshot Repository</name>
-                    <url>http://repository-master.mulesoft.org/snapshots/</url>
-                    <uniqueVersion>false</uniqueVersion>
-                </snapshotRepository>
-            </distributionManagement>
-        </profile>
-    </profiles>
 </project>
 
