--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     </parent>
 
     <artifactId>certified-mule-connector-parent</artifactId>
-    <version>3.9.2-SNAPSHOT</version>
+    <version>3.9.1</version>
     <packaging>pom</packaging>
 
     <properties>
