--- a/pom.xml
+++ b/pom.xml
@@ -1,215 +1,57 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <name>Certified Mule DevKit Parent</name>
-    <description>
-        This is a parent POM with default settings for building certified connectors.
-    </description>
-    <url>https://github.com/mulesoft/certified-mule-connector-parent</url>
-    <inceptionYear>2010</inceptionYear>
-
-    <scm>
-        <connection>scm:git:git://github.com:mulesoft/certified-mule-connector-parent.git</connection>
-        <developerConnection>scm:git:git@github.com:mulesoft/certified-mule-connector-parent.git</developerConnection>
-        <url>http://github.com/mulesoft/certified-mule-connector-parent</url>
-        <tag>HEAD</tag>
-    </scm>
-
     <parent>
-        <groupId>org.mule.tools.devkit</groupId>
-        <artifactId>mule-devkit-parent</artifactId>
-        <version>3.9.4</version>
+        <groupId>org.mule.extensions</groupId>
+        <artifactId>mule-modules-parent</artifactId>
+        <version>1.0.0</version>
     </parent>
-
-    <artifactId>certified-mule-connector-parent</artifactId>
-    <version>3.9.5-SNAPSHOT</version>
+    <groupId>com.mulesoft.connectors</groupId>
+    <artifactId>mule-certified-parent</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-
+    <name>Mule Certified Parent POM</name>
     <properties>
-        <jacoco.plugin.version>0.7.2.201409121644</jacoco.plugin.version>
+        <jdk.version>1.8</jdk.version>
     </properties>
-
-    <profiles>
-        <profile>
-            <id>certified-parent-pom-deploy</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-release-plugin</artifactId>
-                        <configuration>
-                            <pushChanges>true</pushChanges>
-                        </configuration>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.apache.maven.scm</groupId>
-                                <artifactId>maven-scm-provider-gitexe</artifactId>
-                                <version>1.8.1</version>
-                            </dependency>
-                        </dependencies>
-                        <version>2.5.2</version>
-                    </plugin>
-                </plugins>
-            </build>
-            <distributionManagement>
-                <repository>
-                    <id>mulesoft-releases</id>
-                    <name>MuleSoft Repository</name>
-                    <url>http://repository-master.mulesoft.org/releases/</url>
-                </repository>
-                <snapshotRepository>
-                    <id>mulesoft-snapshots</id>
-                    <name>MuleSoft Snapshot Repository</name>
-                    <url>http://repository-master.mulesoft.org/snapshots/</url>
-                    <uniqueVersion>false</uniqueVersion>
-                </snapshotRepository>
-            </distributionManagement>
-        </profile>
-    </profiles>
 
     <build>
         <plugins>
+
+            <!-- Plugin included to add Integration Tests (IT) to the build lifecycle. -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
-                <configuration>
-                    <enableAssertions>false</enableAssertions>
-                </configuration>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.20.1</version>
                 <executions>
                     <execution>
-                        <id>default-test</id>
-                        <phase>test</phase>
+                        <id>integration-test</id>
                         <goals>
-                            <goal>test</goal>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
                         </goals>
-                        <configuration>
-                            <argLine>${jacoco.ut.agent}</argLine>
-                            <includes>
-                                <include>**/*.java</include>
-                            </includes>
-                            <excludes>
-                                <exclude>**/*IT.java</exclude>
-                            </excludes>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>integration-tests</id>
-                        <phase>integration-test</phase>
-                        <goals>
-                            <goal>test</goal>
-                        </goals>
-                        <configuration>
-                            <systemPropertyVariables>
-                                <ctf.connector.class>${ctf.connector.class}</ctf.connector.class>
-                            </systemPropertyVariables>
-                            <properties>
-                                <property>
-                                    <name>listener</name>
-                                    <value>org.mule.tools.devkit.ctf.listeners.ConnectorTestFrameworkRunListener</value>
-                                </property>
-                            </properties>
-                            <argLine>${jacoco.it.agent}</argLine>
-                            <includes>
-                                <include>**/*IT.java</include>
-                            </includes>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- Plugin added to fix issue in release plugin while using git. -->
             <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${jacoco.plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>prepare-agent</id>
-                        <phase>process-classes</phase>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                        <configuration>
-                            <propertyName>jacoco.ut.agent</propertyName>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>prepare-agent-integration</id>
-                        <phase>pre-integration-test</phase>
-                        <goals>
-                            <goal>prepare-agent-integration</goal>
-                        </goals>
-                        <configuration>
-                            <propertyName>jacoco.it.agent</propertyName>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>report</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>report-integration</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>report-integration</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.4.2</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.scm</groupId>
+                        <artifactId>maven-scm-provider-gitexe</artifactId>
+                        <version>1.8.1</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
 
-    <repositories>
-        <repository>
-            <id>mulesoft-releases</id>
-            <name>MuleSoft Releases Repository</name>
-            <url>http://repository.mulesoft.org/releases/</url>
-            <layout>default</layout>
-        </repository>
-        <repository>
-            <id>mulesoft-snapshots</id>
-            <name>MuleSoft Snapshots Repository</name>
-            <url>http://repository.mulesoft.org/snapshots/</url>
-            <layout>default</layout>
-        </repository>
-        <repository>
-            <id>mule-codehaus</id>
-            <name>Mule Repository</name>
-            <url>https://repository.mulesoft.org/nexus/content/repositories/public/</url>
-            <layout>default</layout>
-        </repository>
-    </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>mulesoft-plugin-releases</id>
-            <name>MuleSoft Release Repository</name>
-            <url>http://repository.mulesoft.org/releases/</url>
-            <layout>default</layout>
-        </pluginRepository>
-        <pluginRepository>
-            <id>mulesoft-plugin-snapshots</id>
-            <name>MuleSoft Snapshots Repository</name>
-            <url>http://repository.mulesoft.org/snapshots/</url>
-            <layout>default</layout>
-        </pluginRepository>
-    </pluginRepositories>
-
-    <distributionManagement>
-        <repository>
-            <id>mule-ee-releases</id>
-            <name>MuleEE Releases Repository</name>
-            <url>https://repository-master.mulesoft.org/nexus/content/repositories/releases-ee/</url>
-        </repository>
-        <snapshotRepository>
-            <id>mule-ee-snapshots</id>
-            <name>MuleEE Snapshots Repository</name>
-            <url>https://repository-master.mulesoft.org/nexus/content/repositories/ci-snapshots/</url>
-            <uniqueVersion>false</uniqueVersion>
-        </snapshotRepository>
-    </distributionManagement>
-
+    <scm>
+        <connection>scm:git:git@github.com:mulesoft/certified-mule-connector-parent.git</connection>
+        <developerConnection>scm:git:git@github.com:mulesoft/certified-mule-connector-parent.git</developerConnection>
+        <url>https://github.com/mulesoft/certified-mule-connector-parent</url>
+        <tag>HEAD</tag>
+    </scm>
 </project>
-
