--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <parent>
         <groupId>org.mule.extensions</groupId>
         <artifactId>mule-modules-parent</artifactId>
-        <version>1.0.0</version>
+        <version>1.1.1</version>
     </parent>
-    <groupId>com.mulesoft.connectors</groupId>
+    <groupId>org.mule.connectors</groupId>
     <artifactId>mule-certified-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Mule Certified Parent POM</name>
     <properties>
