--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     </parent>
     <groupId>com.mulesoft.connectors</groupId>
     <artifactId>mule-certified-parent</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Mule Certified Parent POM</name>
     <properties>
@@ -54,4 +54,12 @@
         <url>https://github.com/mulesoft/certified-mule-connector-parent</url>
         <tag>mule-certified-parent-1.0.0</tag>
     </scm>
+
+    <repositories>
+        <repository>
+            <id>mule-releases</id>
+            <name>Nexus Public Releases</name>
+            <url>https://repository-master.mulesoft.org/nexus/content/repositories/releases/</url>
+        </repository>
+    </repositories>
 </project>
