--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.mule.extensions</groupId>
         <artifactId>mule-modules-parent</artifactId>
-        <version>1.1.1</version>
+        <version>1.1.3-SNAPSHOT</version>
     </parent>
     <groupId>org.mule.connectors</groupId>
     <artifactId>mule-certified-parent</artifactId>
