--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,11 @@
     <parent>
         <groupId>org.mule.tools.devkit</groupId>
         <artifactId>mule-devkit-parent</artifactId>
-        <version>3.9.4</version>
+        <version>3.9.5</version>
     </parent>
 
     <artifactId>certified-mule-connector-parent</artifactId>
-    <version>3.9.4</version>
+    <version>3.9.5-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
