--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,18 @@
                     </dependency>
                 </dependencies>
             </plugin>
+
+            <!-- Plugins set for making the build work. -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+                <version>2.5.2</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.2</version>
+            </plugin>
         </plugins>
     </build>
 
