--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <groupId>org.mule.tools.devkit</groupId>
         <artifactId>mule-devkit-parent</artifactId>
-        <version>3.9.17-SNAPSHOT</version>
+        <version>3.9.17</version>
     </parent>
 
     <artifactId>certified-mule-connector-parent</artifactId>
